--- a/canvas.html
+++ b/canvas.html
@@ -26,25 +26,43 @@
           color =data;
         });
         canvas.addEventListener('mousedown',function(event){
-
+          isDown = true;
+          oldPoint = new Point(event,this);
         });
         canvas.addEventListener('mouseup',function(){
-
+          isDown = false;
         });
         canvas.addEventListener('mousemove',function(event){
-
+          if(isDown){
+            newPoint = new Point(event,this);
+            socket.emit('draw',{
+              width:width,
+              color:color,
+              x1:oldPoint.x,
+              y1:oldPoint.y,
+              x2:newPoint.x,
+              y2:newPoint.y
+            });
+            oldPoint = newPoint;
+          }
         });
 
         $('#sliderA').change(function(){
-
+          width = $(this).val();
         });
         $('#sliderB').change(function(){
-
+          opacity = $(this).val()/100;
         });
         var socket=io.connect();
         socket.emit('join','<%= room %>');
         socket.on('line',function(data){
-
+          context.lineWidth = data.width;
+          context.strokeStyle=data.color;
+          context.globalAlpha=opacity * pressure;
+          context.beginPath();
+          context.moveTo(data.x1,data.y1);
+          context.lineTo(data.x2,data.y2);
+          context.stroke();
         });
 
       });
@@ -63,7 +81,7 @@
       <tr>
         <td height="25">
           <input id="sliderA" type="range" min="0" max="20" value="5" /><br/>
-          <input type="sliderB" type="range" min="0" max="100" />
+          <input id="sliderB" type="range" min="0" max="100" />
         </td>
       </tr>
       <tr>
